<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="controller"
            type="br.com.nglauber.exercicio01.MainActivity"/>
        <variable
            name="combustivelModel"
            type="br.com.nglauber.exercicio01.CombustivelModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.nglauber.exercicio01.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_gasolina" />

        <EditText
            android:id="@+id/edit_gasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={combustivelModel.gasolina}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_alcool" />

        <EditText
            android:id="@+id/edit_alcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={combustivelModel.alcool}"/>

        <Button
            android:id="@+id/button_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="@{controller::calcularClick}"
            android:text="@string/button_calcular" />

        <TextView
            android:id="@+id/text_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@{combustivelModel.textoResultado}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_resultado"
            android:id="@+id/button"
            android:layout_gravity="right"
            android:onClick="@{controller::verResultadoClick}"/>
    </LinearLayout>
</layout>