<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="comb"
            type="br.com.nglauber.exercicio01.CombustivelModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.nglauber.exercicio01.ResultActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_gasolina" />

        <TextView
            android:id="@+id/texto_gasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{comb.gasolina}"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_alcool" />

        <TextView
            android:id="@+id/texto_alcool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{comb.alcool}"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_resultado" />

        <TextView
            android:id="@+id/texto_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{comb.textoResultado}"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
</layout>